--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
 .wrapper {
 	text-align: center;
 	margin: auto;
-	width: 500px;
+	max-width: 500px;
 	padding: 25px;
 	margin: auto;
 }
@@ -37,19 +37,28 @@ a {
 	color: inherit;
 }
 
-input[type=text], button {
-	padding: 10px;
+input[type=text] {
+	display: block;
+	border: 0;
+	border-radius: 4px;
+	width: 100%;
+	padding: 15px;
 }
 	.share-btn {
+		color: #FFF;
 		margin-top: 25px;
 		width: 100px;
-		border-radius: 3px;
+		border-radius: 4px;
+		padding: 10px;
+		background-color: #446A98;
+		font-weight: bold;
+		border: 1px solid #CCC;
+		cursor: pointer;
+		transition: backgroundColor, .2s ease-in-out;
 	}
-	input[type=text] {
-		display: block;
-		border: 0;
-		width: 100%;
-	}
+		.share-btn:hover {
+			background-color: #1C2941;
+		}
 
 #footer {
 	position: fixed;
@@ -65,6 +74,7 @@ input[type=text], button {
 
 .border {
 	border: 1px solid #CCC;
+	border-radius: 4px;
 }
 
 h1 {
@@ -83,7 +93,7 @@ h2 {
 	position: relative;
 	background: #fff;
 	padding: 20px;
-	margin-top: 25px;
+	margin-top: 15px;
 }
 	#thoughts_overlay:before {
 	  position: absolute;
